ns-one/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: ns-one
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ["sh", "-c", "while true; do sleep 3600; done"]
