ns-one/nginx-networkpolicy.yaml
# Create a network policy that is not going to allow the connection to connect across namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-policy
  namespace: ns-one
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: {}
